--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,5 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);
 @charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Nunito);
 
 /*!
  * Bootstrap v4.6.2 (https://getbootstrap.com/)
@@ -11007,4 +11007,8 @@ a.text-dark:focus {
 
 .m-b-md {
   margin-bottom: 30px;
+}
+
+.alert {
+  text-align: left;
 }
